# TRAPIObjectModeling

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/actions/setup-workspace/: action.yml
.github/workflows/: checks.yml  publish.yml
data/exampleTrapi/: fix_jsons.py  small.json
perf/: test_read.py  test_sd.py
src/: dataclass.py  plain_pydantic.py  pydantic_dataclass.py  test_dataclasses.py  test_openapi_server_classes.py  test_plain_pydantic.py  test_pydantic_dataclasses.py  test_reasoner_pydantic_classes.py  test_typeddict.py  typeddict.py
src/translator_tom/: __init__.py
src/translator_tom/models/: analysis.py  asyncquery.py  attribute.py  attribute_constraint.py  auxiliary_graph.py  edge_binding.py  knowledge_graph.py  log_entry.py  message.py  meta_attribute.py  meta_knowledge_graph.py  meta_qualifier.py  node_binding.py  path_binding.py  path_constraint.py  qualifier.py  qualifier_constraint.py  query.py  query_graph.py  response.py  result.py  retrieval_source.py  shared.py  workflow_operations.py
src/translator_tom/utils/: biolink.py  config.py  diff.py  hash.py  object_base.py
src/translator_tom/validation/: __init__.py  _analysis.py  _asyncquery.py  _attribute.py  _attribute_constraint.py  _auxiliary_graph.py  _edge_binding.py  _knowledge_graph.py  _log_entry.py  _message.py  _meta_attribute.py  _meta_knowledge_graph.py  _meta_qualifier.py  _node_binding.py  _path_binding.py  _path_constraint.py  _qualifier.py  _qualifier_constraint.py  _query.py  _query_graph.py  _response.py  _result.py  _retrieval_source.py  _util.py  _workflow_operations.py
src/trapi_object_modeling/: __init__.py  analysis.py  asyncquery.py  asyncquery_status_response.py  attribute.py  attribute_constraint.py  auxiliary_graph.py  curie.py  edge.py  edge_binding.py  knowledge_graph.py  log_entry.py  log_level.py  message.py  meta_attribute.py  meta_edge.py  meta_knowledge_graph.py  meta_knowledge_grapy.py  meta_node.py  meta_qualifier.py  node.py  node_binding.py  path_binding.py  path_constraint.py  qedge.py  qnode.py  qpath.py  qualifier.py  qualifier_constraint.py  query.py  query_graph.py  response.py  result.py  retrieval_source.py  shared.py  workflow_operations.py
src/trapi_object_modeling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trapi_object_modeling/models/: analysis.py  asyncquery.py  attribute.py  attribute_constraint.py  auxiliary_graph.py  edge_binding.py  knowledge_graph.py  log_entry.py  message.py  meta_attribute.py  meta_knowledge_graph.py  meta_qualifier.py  node_binding.py  path_binding.py  path_constraint.py  qualifier.py  qualifier_constraint.py  query.py  query_graph.py  response.py  result.py  retrieval_source.py  workflow_operations.py
src/trapi_object_modeling/utils/: biolink.py  object_base.py  semantic_validation.py
src/trapi_object_modeling/validation/: __init__.py  _analysis.py  _asyncquery.py  _attribute.py  _attribute_constraint.py  _auxiliary_graph.py  _edge_binding.py  _knowledge_graph.py  _log_entry.py  _message.py  _meta_attribute.py  _meta_knowledge_graph.py  _meta_qualifier.py  _node_binding.py  _path_binding.py  _path_constraint.py  _qualifier.py  _qualifier_constraint.py  _query.py  _query_graph.py  _response.py  _result.py  _retrieval_source.py  _util.py  _workflow_operations.py
tests/: _test_model_read.py  _test_semantic_validation.py  test_curie_utils.py  test_list_properties.py  test_manipulation.py  test_model_read.py  test_models.py  test_regression.py  test_semantic_validation.py
tests/test_models/: test_analysis.py  test_asyncquery.py  test_attribute.py  test_auxiliary_graph.py  test_edge_binding.py  test_knowledge_graph.py  test_log_entry.py  test_message.py  test_meta_attribute.py  test_meta_knowledge_graph.py  test_meta_qualifier.py  test_node_binding.py  test_object_base.py  test_path_binding.py  test_path_constraint.py  test_qualifier.py  test_query.py  test_query_graph.py  test_regression.py  test_response.py  test_result.py  test_retrieval_source.py  test_shared.py  test_update.py  test_workflow.py  test_workflow_operations.py
tests/test_utils/: test_biolink.py  test_config.py  test_diff.py  test_hash.py
tests/util/: general.py
