[project]
name = "trapi-object-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.3",
    "ormsgpack>=1.11.0",
    "pydantic>=2.12.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "bpython>=0.25",
    "deptry>=0.23.1",
    "pre-commit>=4.3.0",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "taskipy>=1.14.1",
]


[tool.uv]
config-settings = { editable_mode = "compat" }
package = true

[tool.taskipy.tasks]
# Code work
hook = "pre-commit install"
lint = 'ruff check src'
'lint:stats' = 'task lint --statistics'
'lint:watch' = 'task lint --watch'
'lint:fix' = 'task lint --fix'

typecheck = 'basedpyright src'
'typecheck:watch' = 'task typecheck --watch'

format = 'ruff format --diff src'
'format:fix' = 'ruff format src'

test = 'pytest --cov=src --cov-config=pyproject.toml --cov-report term-missing'

fixup = """
echo 'Linting...' &&
task lint:fix &&
echo 'Formatting...' &&
task format:fix &&
echo 'Static analysis...' &&
task typecheck &&
echo 'Check dependencies...' &&
deptry src &&
echo "✅ All set!"
"""


[tool.ruff]
include = ["src/*.py"]
line-length = 88
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004", "ANN201"]

[tool.ruff.lint]
select = [
    # All of these were carefully chosen, see https://docs.astral.sh/ruff/rules
    # Pyflakes
    'F',
    # Pycodestyle errors, warning
    'E4',
    'E7',
    'E9',
    'W',
    # isort (sort imports)
    'I',
    # Pydocstyle (document your code!)
    'D',
    # Pep8 naming conventions (but slightly less pedantic)
    'N80',
    # Pyupgrade (use newer conventions)
    'UP',
    # Flake8-bugbear
    'B',
    # Flake8-annotations (require type annotations)
    'ANN0',
    'ANN2',
    # Flake8-builtins (don't overwrite builtins)
    'A',
    # Flake8-comprehensions
    'C4',
    # Flake8-logging-format
    'G',
    # Flake8-simplify
    'SIM',
    # Flake8-use-pathlib (pathlib is just better)
    'PTH',
    # Pylint
    'PL',
    # FastAPI
    'FAST',
    # Perflint
    'PERF',
    # Refurb
    'FURB',
    # Ruff-specific
    'RUF',
]
ignore = ['D100', 'D206', 'D300']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
# Make any allowable. Builtins sometimes deal in Any and aren't worth the extra modeling
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false # Just makes code look worse; Usually unused results are deliberately ignored
reportMissingTypeStubs = false # Sometimes type stubs aren't available and auto-gen is incorrect


[tool.deptry]
extend_exclude = ["locustfile.py", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "orjson", # Used by FastAPI to speed up JSON serialization
]

[tool.pytest.ini_options]
norecursedirs = ["utils"]
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
relative_files = true
omit = ["tests/*"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
include_namespace_packages = true
